# holiday-jp-pip

./: .gitignore  CLAUDE.md  LICENSE  README.md  holiday-jp-pip-start.md  pyproject.toml
.github/workflows/: publish.yml  test-publish.yml  test.yml
doc/: api.md  architecture.md  backlog.md  cicd.md  differences-from-js.md  index.md  setting.md  setup.md
holiday_jp/: __init__.py  _loader.py  holiday.py  settings.py
tests/: conftest.py  test_all.py  test_csv_path.py  test_extends.py  test_get.py  test_holiday.py  test_is_holiday.py  test_is_support_date.py  test_is_valid_date.py  test_is_weekday.py  test_is_weekend.py  test_loader.py  test_max.py  test_min.py  test_scope.py  test_setting.py  test_settings.py
