[project]
name = "holiday-jp-pip"
version = "0.1.0"
description = "Japanese holiday detection library based on Cabinet Office data, ported from holiday-jp-npm."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [
    { name = "Sway11466" },
]
keywords = ["japan", "holiday", "jst", "calendar", "weekday", "weekend"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Scheduling",
    "Natural Language :: Japanese",
    "Typing :: Typed",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/sway11466/holiday-jp-pip"
Repository = "https://github.com/sway11466/holiday-jp-pip"
Issues = "https://github.com/sway11466/holiday-jp-pip/issues"
Documentation = "https://github.com/sway11466/holiday-jp-pip/blob/main/doc/index.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["holiday_jp"]

[tool.hatch.build]
include = [
    "holiday_jp/**/*.py",
    "holiday_jp/syukujitsu.csv",
    "holiday_jp/py.typed",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
